bug: removed extra white space on image

--- a/css/layout/header.css
+++ b/css/layout/header.css
@@ -2,7 +2,7 @@
     grid-area: header;
     background:linear-gradient(to top right, #f8bfbf80,#ee8c8cb4), url(/images/Snapchat-121530559.jpg) no-repeat;
     background-size: cover;
-    background-position: 0 -235px;
+    background-position: 0 0;
     height: 30vh;
     width: 100%;
     margin: 3rem auto;
